fix wrong color

--- a/inc/mission/src/components/pearls.scss
+++ b/inc/mission/src/components/pearls.scss
@@ -20,7 +20,7 @@
 	margin-left: 2px;
 }
 
-.wapuugotchi_missions__pearls.reward-transferred span {
+.wapuugotchi_missions__pearls.reward-transferred {
 	background: #f4fff7;
 	border-color: #00a32a;
 	color: #145214;
